# importacao

./: .dockerignore  .editorconfig  .env.example  .env.sops.yaml.example  .gitignore  .prettierignore  .sops.yaml  .trivyignore  CHANGELOG.md  Manual Importação.docx  README.md  _Follow Automação Importações - 2026_03_23 14_01 GMT-03_00 - Anotações do Gemini.docx  docker-compose.prod.yml  docker-compose.yml  eslint.config.js  package-lock.json  package.json  processo importacao.docx
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  deploy.yml
apps/api/: .dockerignore  Dockerfile  README.md  drizzle.config.ts  entrypoint.sh  package.json  vitest.config.ts  vitest.e2e.config.ts
apps/api/drizzle/: 0000_eminent_typhoid_mary.sql  0001_great_deathstrike.sql  0002_illegal_meggan.sql  0003_sistema_automatico.sql  0004_schema_improvements.sql  0005_certificate_and_reprocessed.sql  0006_first_delivery.sql  0007_draft_bl.sql  0008_email_signatures.sql  0009_process_events.sql  0010_logistic_status_default.sql
apps/api/src/: app.ts  routes.ts  server.ts
apps/cert-api/: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
apps/cert-api/app/: config.py  main.py
apps/cert-api/app/db/: oracle.py  postgres.py  sqlserver.py
apps/cert-api/app/models/: schemas.py
apps/cert-api/app/routes/: certifications.py  health.py  reports.py  schedules.py  stock.py
apps/cert-api/app/services/: cert_service.py  erp_service.py  report_service.py  wms_service.py
apps/cert-api/app/utils/: auth.py  logging.py
apps/cert-api/docs/: DEVELOPMENT.md
apps/cert-api/reports/: produtos_certificacoes_20260307_215141.xlsx  validation_115cc9fc_20260307_213029.json
apps/cert-api/tests/: conftest.py  test_cert_service.py  test_health.py  test_routes.py  test_stock.py
apps/web/: .dockerignore  Dockerfile  README.md  index.html  nginx.conf  package.json  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
apps/web/src/: main.tsx
apps/web/src/app/: App.tsx  (+2 more)
docs/: DR.md  ONBOARDING.md  RUNBOOK.md  SECRETS.md  TLS.md  TODO-execucao.md  cert-api-openapi.json  diagnostico-tecnico-completo.md
docs/adr/: 0001-monorepo-npm-workspaces.md  0002-drizzle-orm.md  0003-jwt-localstorage.md  0004-cert-api-separate-service.md  0005-design-system-v2.md
docs/manual/: generate-manual.py  take-screenshots-v2.mjs  take-screenshots.mjs
infra/nginx/: prod.conf
infra/prometheus/: prometheus.yml
scripts/: analyze-sheet.js  backup-db.sh  deploy.sh  generate-env-from-vault.sh  import-follow-up.cjs  import-follow-up.js  import-lis.js  renew-certs.sh  restore-test.sh  update-processes-extra-data.js
(+296 files in other folders)
