[project]
name = "cert-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.5.0",
  "psycopg2-binary>=2.9.10",
  "python-dotenv>=1.0.1",
  "oracledb>=2.4.0",
  "pymssql>=2.3.0",
  "openpyxl>=3.1.5",
  "gspread>=6.1.0",
  "google-auth>=2.38.0",
  "slowapi>=0.1.9",
  "requests>=2.32.0",
  "apscheduler>=3.10.4",
]

[tool.uv]
dev-dependencies = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "pytest-mock>=3.14.0",
  "pytest-cov>=5.0.0",
  "httpx>=0.27.0",
  "ruff>=0.7.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM", "RET"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
